--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
             <link rel="stylesheet" href="./style.css">  
 
-            <title>Login Page Nigaaaaaaaaa</title>
+            <title>Login Page Nigaaaaaa</title>
         </head>
         
         <body>
