added new meta for better search  engine rendering

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
             <link rel="stylesheet" href="./style.css">  
             
             <title>Login Page</title>
@@ -23,7 +24,7 @@
                             <input type="password" name="password" id="password" placeholder="Password" required>
                      </div> 
                         <div class="button">
-                            <button type="submit" onclick="enterDash()">Login</button> <!--- onclick function that we will use for the script --->
+                            <button type="submit" onclick="enterDash()">Login</button>  <!--- onclick function that we will use for the script --->
                         </div>
                     </form>
             </div>
