--- a/Html pages/analytics.html
+++ b/Html pages/analytics.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <link rel="stylesheet" href="./style.css">  
+            <link rel="stylesheet" href="../Styles/analytics.css">  
             
             <title>Smart Inventory Management</title>
             <link rel="icon" type="image/png" href="./Assets/icon.png">
