added script file

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
                         </div>
                     </form>
             </div>
+
+            <script src="Scripts/script.js"></script>
         </body>
     </html>
