--- a/Html pages/dashboard.html
+++ b/Html pages/dashboard.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <link rel="stylesheet" href="../Styles/dashboard.css">  
-            
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />            
             <title>Smart Inventory Management</title>
             <link rel="icon" type="image/png" href="./Assets/icon.png">
         
@@ -173,16 +173,16 @@
                               </tr>
                               <tr>
                                 <td>4565</td>
-                                <td>Mini USB</td>                  
-                                <td>Due</td>
-                                <td class="warning">Pending</td>
+                                <td>Jungle Oats</td>                  
+                                <td>6001275000003</td>
+                                <td class="warning">Expires in 6 months </td>
                                 <td class="primary">Details</td>
                               </tr>
                               <tr>
                                 <td>4566</td>
-                                <td>Mini USB</td>                  
-                                <td>Due</td>
-                                <td class="warning">Pending</td>
+                                <td>Salt</td>                  
+                                <td>6001021021030</td>
+                                <td class="warning">Expires in 1 month</td>
                                 <td class="primary">Details</td>
                               </tr>
                             </tbody>
